fixed spacing on mobile flashes

--- a/app/assets/stylesheets/matches.css.scss
+++ b/app/assets/stylesheets/matches.css.scss
@@ -19,7 +19,11 @@
 }
 
 .visible-phone {
-	margin-top: -60px;
+	margin-top: -45px;
+}
+
+.phone-flashes {
+	padding-bottom: 2em;
 }
 
 .score-title, .new-player-form, .current-matches, .holes-title, .hole-form {
